apps/production/guacamole/ingressConfig.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guacamole
  namespace: guacamole
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`guacamole.vandelocht.uk`)
      kind: Rule
      services:
        - name: guacamole-guacamole
          port: 80
      middlewares:
        - name: svc-guacamole-headers
  tls:
    secretName: guacamole-vandelocht-uk-production-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: svc-guacamole-headers
  namespace: guacamole
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
